add APIs to CRU Client
